unpackaged/main/default/objects/omnistudio__Interface_DRGeneric__c/omnistudio__Interface_DRGeneric__c.object-meta.xml
<CustomObject>
    <description>Interface Object: Generic Vlocity Data Mapper interface object which can be used for staging data to be imported.</description>
    <label>Vlocity Data Mapper Object Interface</label>
    <nameField>
        <label>Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Data Mapper Object Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>