unpackaged/main/default/objects/omnistudio__Interface_DRGeneric__c/fields/omnistudio__DRError__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__DRError__c</fullName>
    <description>Full error when processing.</description>
    <label>DR Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>