unpackaged/main/default/objects/omnistudio__Interface_DRGeneric__c/fields/omnistudio__DRProgressData__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__DRProgressData__c</fullName>
    <description>JSON of current progress processing item if using bulk processing methods</description>
    <label>DR Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>